--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
 abstract.crud.service.id.notexist = "Can not find id {0} of type {1} in the repository"
+abstract.crud.service.object.null = "Can not save an object of type {0} that has a null value"
+
 
 reaction.id.add.scheme.service = "Can't add reactionId {0} to scheme because it does not exist"
