--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
-abstract.crud.service.id.notexist = "Can not find id {0} of type {1} in the repository"
-abstract.crud.service.object.null = "Can not save an object of type {0} that has a null value"
+abstract.crud.service.id.notexist = Can not find id {0} in the repository
+concrete.crud.service.id.notexist = Can not find id {0} of type {1} in the repository
+abstract.crud.service.object.null = Can not save an object that has a null value
+concrete.crud.service.object.null = Can not save an object of type {0} that has a null value
 
-
-reaction.id.add.scheme.service = "Can't add reactionId {0} to scheme because it does not exist"
+scheme.service.add = Can not add {0} with id {1} to scheme because the id does not exist
